--- a/examples/flux-1/package.json
+++ b/examples/flux-1/package.json
@@ -4,9 +4,11 @@
   "dependencies": {
     "browserify": "^11.0.1",
     "concat": "^1.0.0",
+    "es6-promise": "^3.0.2",
     "gulp": "^3.9.0",
     "immutable": "^3.7.4",
     "material-ui": "^0.10.4",
+    "object-assign": "^3.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "react-tap-event-plugin": "^0.1.7",
