--- a/examples/seo-tool/package.json
+++ b/examples/seo-tool/package.json
@@ -5,7 +5,9 @@
     "browserify": "^11.0.1",
     "concat": "^1.0.0",
     "es6-promise": "^3.0.2",
+    "flux": "^2.1.1",
     "gulp": "^3.9.0",
+    "immutable": "^3.7.4",
     "material-ui": "^0.10.4",
     "object-assign": "^3.0.0",
     "react": "^0.13.3",
