--- a/examples/seo-tool/package.json
+++ b/examples/seo-tool/package.json
@@ -5,6 +5,7 @@
     "browserify": "^11.0.1",
     "concat": "^1.0.0",
     "es6-promise": "^3.0.2",
+    "express": "^4.13.3",
     "flux": "^2.1.1",
     "gulp": "^3.9.0",
     "immutable": "^3.7.4",
