--- a/examples/react-express/package.json
+++ b/examples/react-express/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.13.3",
     "browser-sync": "^2.8.2",
     "browserify": "^11.0.1",
     "ejs": "^2.3.3",
