--- a/examples/react-express/package.json
+++ b/examples/react-express/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.9.0",
     "gulp-live-server": "0.0.24",
     "jquery": "^2.1.4",
+    "mongoose": "^4.1.3",
     "react": "^0.13.3",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
